[package]
name = "chess-server"
version = "0.1.0"
authors = ["Mark McCaskey and Brad Boccuzzi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "0.3", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.12"
